--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -514,3 +514,16 @@
   transition: all 0.3s ease;
 }
 
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-track{
+  background-color: var(--vp-c-bg);
+}
+::-webkit-scrollbar-thumb{
+  background-color:var(--vp-c-indigo-1);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: var(--vp-c-purple-3);
+}
