--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -66,3 +66,14 @@
 .VPDoc {
   padding: 0px 32px 0 !important;
 }
+/* 自定义文字渐变 */
+:root {
+  --vp-home-hero-name-background: -webkit-linear-gradient(120deg,
+      var(--vp-home-hero-bg-color1) 30%,
+      var(--vp-home-hero-bg-color2));
+
+  --vp-home-hero-image-background-image: linear-gradient(-45deg,
+      var(--vp-home-hero-bg-color1) 50%,
+      var(--vp-home-hero-bg-color2) 50%);
+  --vp-home-hero-image-filter: blur(70px);
+}
