--- a/docs/.vitepress/theme/css/variables.css
+++ b/docs/.vitepress/theme/css/variables.css
@@ -1,19 +1,26 @@
 :root {
     /* 主页文字颜色 */
-    --vp-home-hero-bg-color1: #5672cd;
-    --vp-home-hero-bg-color2: #3a5ccc;
+    --vp-home-hero-bg-color1: #0095ff;
+    --vp-home-hero-bg-color2: #33c5a9;
 
     /* 阅读进度条颜色 */
     --reading-pg-line-color1: #42b883;
     --reading-pg-line-color2: #35495e;
+
+    /* 按钮颜色 */
+    --vp-c-indigo-3:#33c5a9;
+    --vp-c-indigo-2:#0095ff;
 }
 
 
 .dark {
-    --vp-home-hero-bg-color1: #5c73e7;
-    --vp-home-hero-bg-color2: #3e63dd;
+    --vp-home-hero-bg-color1: #0095ff;
+    --vp-home-hero-bg-color2: #33c5a9;
 
     --reading-pg-line-color1: var(--vp-home-hero-bg-color2);
     --reading-pg-line-color2: var(--vp-home-hero-bg-color1);
+
+    --vp-c-indigo-3:#0095ff;
+    --vp-c-indigo-2:#33c5a9;
 
 }
