--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -56,11 +56,11 @@
 }
 
 /* 自定义底部距离 */
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .VPFooter {
     padding: 10px !important;
   }
-}
+} */
 
 /* 移除标题组件上方空位置 */  
 .VPDoc {
