--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -75,7 +75,7 @@
   --vp-home-hero-image-background-image: linear-gradient(-45deg,
       var(--vp-home-hero-bg-color1) 50%,
       var(--vp-home-hero-bg-color2) 50%);
-  /* --vp-home-hero-image-filter: blur(40px); */
+  --vp-home-hero-image-filter: blur(40px);
 }
 
 .custom-image-container{
