--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -133,7 +133,7 @@
 .custom-block {
   margin: 28px 0;
   padding: 16px;
-  border-radius: 2px;
+  /* border-radius: 2px; */
   background-color: var(--vp-c-bg-soft);
   border-left: 5px solid;
   transition: border-color 0.5s, background-color 0.5s;
