--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -70,6 +70,8 @@
 /* 标题上方空位置 */
 .vp-doc h1{
   margin-top: 24px !important;
+  padding-bottom: 16px !important;
+  border-bottom: 1px solid var(--vp-c-divider) !important;
 }
 
 @keyframes animate {
