--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -122,6 +122,13 @@
   border-width: 2px !important;
 }
 
+/* 自定义版权 */
+.copyright a{
+  text-decoration: none !important;
+}
+
+
+
 
 /* 图片容器 */
 .custom-image-container{
