--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -7,8 +7,8 @@
 }
 
 .dark {
-  --vp-c-bg: #1b1b1f;
-  --vp-c-bg-alt: #161618;
+  --vp-c-bg: #1a1a1a;
+  --vp-c-bg-alt: #181818;
   --vp-c-bg-elv: #202127;
   --vp-c-bg-soft: #202127;
 
